--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "typescript": "^5.8.3"
   },
   "dependencies": {
-    "@langchain/community": "^0.3.45",
+    "@langchain/anthropic": "^0.3.23",
+    "@langchain/community": "^0.3.47",
     "@langchain/core": "^0.3.61",
     "@langchain/langgraph": "^0.3.4",
     "@langchain/openai": "^0.5.12",
